syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package="pkg/service/proto";

message FoodTemplate {
    string id = 1;
    string name = 3;
    optional float gram_per_miller = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message FoodTemplateList {
    repeated FoodTemplate food_templates = 1;
}
service FoodTemplateService {
    rpc GetFoodTemplateList (google.protobuf.Empty) returns (FoodTemplateList);
}